implemented json dictionary factory

--- a/sqllite-database/sql-db.ipynb
+++ b/sqllite-database/sql-db.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -29,26 +29,23 @@
     {
      "data": {
       "text/plain": [
-       "u'Connected: None@/Users/tgarske/development/csci4211/sqllite-database/csciAppDev.db'"
+       "u'Connected: None@csciAppDev.db'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%capture\n",
-    "\n",
     "%load_ext sql\n",
     "\n",
     "address = '127.0.0.1'\n",
-    "user = 'gpadmin'\n",
-    "path = '/Users/tgarske/development/csci4211/sqllite-database'\n",
+    "user = 'myadmin'\n",
     "database = 'csciAppDev.db'\n",
     "\n",
-    "#%sql postgresql://$user@$address/$database\n",
-    "%sql sqlite:///$path/$database"
+    "%sql sqlite:///$database"
    ]
   },
   {
@@ -92,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +127,7 @@
        " (u'users', 2, u'CREATE TABLE users (id INTEGER PRIMARY KEY AUTOINCREMENT, \\n                      title TEXT, \\n                      description TEXT, \\n                      done INTEGER)')]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +156,7 @@
        "[]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -182,59 +179,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done.\n"
+      "(sqlite3.OperationalError) near \"json\": syntax error [SQL: u'select * from users for json']\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>id</th>\n",
-       "        <th>title</th>\n",
-       "        <th>description</th>\n",
-       "        <th>done</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>1</td>\n",
-       "        <td>Buy groceries</td>\n",
-       "        <td>Milk, Cheese, Pizza, Fruit, Tylenol</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>2</td>\n",
-       "        <td>Learn Python</td>\n",
-       "        <td>Need to find a good Python tutorial on the web</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>3</td>\n",
-       "        <td>dbBuy groceries</td>\n",
-       "        <td>Milk, Cheese, Pizza, Fruit, Tylenol</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>4</td>\n",
-       "        <td>dbLearn Python</td>\n",
-       "        <td>Need to find a good Python tutorial on the web</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(1, u'Buy groceries', u'Milk, Cheese, Pizza, Fruit, Tylenol', 0),\n",
-       " (2, u'Learn Python', u'Need to find a good Python tutorial on the web', 0),\n",
-       " (3, u'dbBuy groceries', u'Milk, Cheese, Pizza, Fruit, Tylenol', 0),\n",
-       " (4, u'dbLearn Python', u'Need to find a good Python tutorial on the web', 0)]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql select * from users"
+    "%sql select * from users for json"
    ]
   },
   {
@@ -248,6 +198,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
