--- a/sqllite-database/sql-db.ipynb
+++ b/sqllite-database/sql-db.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -179,12 +179,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(sqlite3.OperationalError) near \"json\": syntax error [SQL: u'select * from users for json']\n"
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>id</th>\n",
+       "        <th>title</th>\n",
+       "        <th>description</th>\n",
+       "        <th>done</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Buy groceries</td>\n",
+       "        <td>Milk, Cheese, Pizza, Fruit, Tylenol</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Learn Python</td>\n",
+       "        <td>Need to find a good Python tutorial on the web</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>dbBuy groceries</td>\n",
+       "        <td>Milk, Cheese, Pizza, Fruit, Tylenol</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>dbLearn Python</td>\n",
+       "        <td>Need to find a good Python tutorial on the web</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>dbBuy groceries</td>\n",
+       "        <td>Milk, Cheese, Pizza, Fruit, Tylenol</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>6</td>\n",
+       "        <td>dbLearn Python</td>\n",
+       "        <td>Need to find a good Python tutorial on the web</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, u'Buy groceries', u'Milk, Cheese, Pizza, Fruit, Tylenol', 0),\n",
+       " (2, u'Learn Python', u'Need to find a good Python tutorial on the web', 0),\n",
+       " (3, u'dbBuy groceries', u'Milk, Cheese, Pizza, Fruit, Tylenol', 0),\n",
+       " (4, u'dbLearn Python', u'Need to find a good Python tutorial on the web', 0),\n",
+       " (5, u'dbBuy groceries', u'Milk, Cheese, Pizza, Fruit, Tylenol', 0),\n",
+       " (6, u'dbLearn Python', u'Need to find a good Python tutorial on the web', 0)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql select * from users for json"
+    "%sql select * from users"
    ]
   },
   {
