--- a/sqllite-database/sql-db.ipynb
+++ b/sqllite-database/sql-db.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
        "u'Connected: None@csciAppDev.db'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -61,8 +61,8 @@
      "text": [
       "Done.\n",
       "Done.\n",
-      "CPU times: user 2.96 ms, sys: 1.83 ms, total: 4.8 ms\n",
-      "Wall time: 5.23 ms\n"
+      "CPU times: user 2.99 ms, sys: 2.05 ms, total: 5.03 ms\n",
+      "Wall time: 3.88 ms\n"
      ]
     },
     {
@@ -71,7 +71,7 @@
        "[]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +127,7 @@
        " (u'users', 2, u'CREATE TABLE users (id INTEGER PRIMARY KEY AUTOINCREMENT, \\n                      title TEXT, \\n                      description TEXT, \\n                      done INTEGER)')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -156,21 +156,21 @@
        "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql \n",
-    "INSERT INTO  users (title, description, done)\n",
+    "INSERT INTO users (title, description, done)\n",
     "VALUES ('dbBuy groceries', 'Milk, Cheese, Pizza, Fruit, Tylenol', 0 ),\n",
     "       ('dbLearn Python', 'Need to find a good Python tutorial on the web', 0 );"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -194,52 +194,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "        <td>1</td>\n",
-       "        <td>Buy groceries</td>\n",
-       "        <td>Milk, Cheese, Pizza, Fruit, Tylenol</td>\n",
+       "        <td>test</td>\n",
+       "        <td>description</td>\n",
        "        <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>2</td>\n",
-       "        <td>Learn Python</td>\n",
-       "        <td>Need to find a good Python tutorial on the web</td>\n",
+       "        <td>test1</td>\n",
+       "        <td>description</td>\n",
        "        <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>3</td>\n",
-       "        <td>dbBuy groceries</td>\n",
-       "        <td>Milk, Cheese, Pizza, Fruit, Tylenol</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>4</td>\n",
-       "        <td>dbLearn Python</td>\n",
-       "        <td>Need to find a good Python tutorial on the web</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>5</td>\n",
-       "        <td>dbBuy groceries</td>\n",
-       "        <td>Milk, Cheese, Pizza, Fruit, Tylenol</td>\n",
-       "        <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>6</td>\n",
-       "        <td>dbLearn Python</td>\n",
-       "        <td>Need to find a good Python tutorial on the web</td>\n",
+       "        <td>test1</td>\n",
+       "        <td>description</td>\n",
        "        <td>0</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(1, u'Buy groceries', u'Milk, Cheese, Pizza, Fruit, Tylenol', 0),\n",
-       " (2, u'Learn Python', u'Need to find a good Python tutorial on the web', 0),\n",
-       " (3, u'dbBuy groceries', u'Milk, Cheese, Pizza, Fruit, Tylenol', 0),\n",
-       " (4, u'dbLearn Python', u'Need to find a good Python tutorial on the web', 0),\n",
-       " (5, u'dbBuy groceries', u'Milk, Cheese, Pizza, Fruit, Tylenol', 0),\n",
-       " (6, u'dbLearn Python', u'Need to find a good Python tutorial on the web', 0)]"
+       "[(1, u'test', u'description', 0),\n",
+       " (2, u'test1', u'description', 0),\n",
+       " (3, u'test1', u'description', 0)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
