server side working

--- a/sqlite-database/production.ipynb
+++ b/sqlite-database/production.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -71,10 +71,45 @@
        "        <th>rootpage</th>\n",
        "        <th>sql</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>sqlite_sequence</td>\n",
+       "        <td>3</td>\n",
+       "        <td>CREATE TABLE sqlite_sequence(name,seq)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>baseline_dev</td>\n",
+       "        <td>6</td>\n",
+       "        <td>CREATE TABLE baseline_dev (xAxis REAL,yAxis REAL,zAxis REAL,timeStep REAL)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MotionData_temp</td>\n",
+       "        <td>4</td>\n",
+       "        <td>CREATE TABLE MotionData_temp (xAxis REAL,yAxis REAL,zAxis REAL,timeStep REAL)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MotionData_devHR</td>\n",
+       "        <td>11</td>\n",
+       "        <td>CREATE TABLE MotionData_devHR (xAxis REAL,yAxis REAL,zAxis REAL,timeStep REAL)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MotionData_dev</td>\n",
+       "        <td>2</td>\n",
+       "        <td>CREATE TABLE MotionData_dev (id INTEGER PRIMARY KEY AUTOINCREMENT, <br>                             xAxis REAL, <br>                             yAxis REAL, <br>                             zAxis REAL,<br>                             timeStep REAL)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>MotionData_devBR</td>\n",
+       "        <td>5</td>\n",
+       "        <td>CREATE TABLE MotionData_devBR (xAxis REAL,yAxis REAL,zAxis REAL,timeStep REAL)</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(u'sqlite_sequence', 3, u'CREATE TABLE sqlite_sequence(name,seq)'),\n",
+       " (u'baseline_dev', 6, u'CREATE TABLE baseline_dev (xAxis REAL,yAxis REAL,zAxis REAL,timeStep REAL)'),\n",
+       " (u'MotionData_temp', 4, u'CREATE TABLE MotionData_temp (xAxis REAL,yAxis REAL,zAxis REAL,timeStep REAL)'),\n",
+       " (u'MotionData_devHR', 11, u'CREATE TABLE MotionData_devHR (xAxis REAL,yAxis REAL,zAxis REAL,timeStep REAL)'),\n",
+       " (u'MotionData_dev', 2, u'CREATE TABLE MotionData_dev (id INTEGER PRIMARY KEY AUTOINCREMENT, \\n                             xAxis REAL, \\n                             yAxis REAL, \\n                             zAxis REAL,\\n                             timeStep REAL)'),\n",
+       " (u'MotionData_devBR', 5, u'CREATE TABLE MotionData_devBR (xAxis REAL,yAxis REAL,zAxis REAL,timeStep REAL)')]"
       ]
      },
      "execution_count": 3,
@@ -127,13 +162,9 @@
    ],
    "source": [
     "%%time\n",
-    "%%sql\n",
-    "--Development User Table\n",
+    "%%sql=\n",
     "DROP TABLE IF EXISTS users;\n",
-    "CREATE TABLE users (id INTEGER PRIMARY KEY AUTOINCREMENT, \n",
-    "                      title TEXT, \n",
-    "                      description TEXT, \n",
-    "                      done INTEGER);"
+    "CREATE TABLE users (id INTEGER PRIMARY KEY AUTOINCREMENT, title TEXT, description TEXT, done INTEGER);"
    ]
   },
   {
@@ -167,6 +198,105 @@
     "VALUES ('dbBuy groceries', 'Milk, Cheese, Pizza, Fruit, Tylenol', 0 ),\n",
     "       ('dbLearn Python', 'Need to find a good Python tutorial on the web', 0 );"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### create history table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n",
+      "Done.\n",
+      "CPU times: user 2.85 ms, sys: 1.96 ms, total: 4.81 ms\n",
+      "Wall time: 3.77 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%sql\n",
+    "DROP TABLE IF EXISTS history;\n",
+    "CREATE TABLE history (id INTEGER PRIMARY KEY AUTOINCREMENT, \n",
+    "                      user INTEGER, \n",
+    "                      rateType TEXT, \n",
+    "                      recordedValue REAL, \n",
+    "                      recordedDatetime TIMESTAMP DEFAULT CURRENT_TIMESTAMP);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>id</th>\n",
+       "        <th>user</th>\n",
+       "        <th>rateType</th>\n",
+       "        <th>recordedValue</th>\n",
+       "        <th>recordedDatetime</th>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql select * from history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
