loaded history from server

--- a/sqlite-database/production.ipynb
+++ b/sqlite-database/production.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -274,19 +274,81 @@
        "        <th>recordedValue</th>\n",
        "        <th>recordedDatetime</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>0</td>\n",
+       "        <td>heart</td>\n",
+       "        <td>94.8078348775</td>\n",
+       "        <td>2016-12-12 23:47:54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>0</td>\n",
+       "        <td>breathing</td>\n",
+       "        <td>26.7360042658</td>\n",
+       "        <td>2016-12-13 21:55:26</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(1, 0, u'heart', 94.80783487748165, u'2016-12-12 23:47:54'),\n",
+       " (2, 0, u'breathing', 26.73600426578904, u'2016-12-13 21:55:26')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%sql select * from history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>id</th>\n",
+       "        <th>user</th>\n",
+       "        <th>rateType</th>\n",
+       "        <th>recordedValue</th>\n",
+       "        <th>recordedDatetime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>0</td>\n",
+       "        <td>breathing</td>\n",
+       "        <td>26.7360042658</td>\n",
+       "        <td>2016-12-13 21:55:26</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2, 0, u'breathing', 26.73600426578904, u'2016-12-13 21:55:26')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT * FROM history WHERE rateType = 'breathing' AND user = '0'"
    ]
   },
   {
