implemented login and registration

--- a/sqlite-database/production.ipynb
+++ b/sqlite-database/production.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -145,8 +145,8 @@
      "text": [
       "Done.\n",
       "Done.\n",
-      "CPU times: user 3.03 ms, sys: 1.93 ms, total: 4.96 ms\n",
-      "Wall time: 5.28 ms\n"
+      "CPU times: user 3.74 ms, sys: 2.3 ms, total: 6.04 ms\n",
+      "Wall time: 6.46 ms\n"
      ]
     },
     {
@@ -155,21 +155,25 @@
        "[]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "%%sql=\n",
+    "%%sql\n",
     "DROP TABLE IF EXISTS users;\n",
-    "CREATE TABLE users (id INTEGER PRIMARY KEY AUTOINCREMENT, title TEXT, description TEXT, done INTEGER);"
+    "CREATE TABLE users (id INTEGER PRIMARY KEY AUTOINCREMENT, \n",
+    "                    username TEXT, \n",
+    "                    password TEXT,\n",
+    "                    joinedDate TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
+    "                   UNIQUE (username,password) ON CONFLICT REPLACE);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 rows affected.\n"
+      "1 rows affected.\n"
      ]
     },
     {
@@ -187,16 +191,74 @@
        "[]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql \n",
-    "INSERT INTO users (title, description, done)\n",
-    "VALUES ('dbBuy groceries', 'Milk, Cheese, Pizza, Fruit, Tylenol', 0 ),\n",
-    "       ('dbLearn Python', 'Need to find a good Python tutorial on the web', 0 );"
+    "INSERT INTO users (username, password)\n",
+    "VALUES ('TomGarske', 'password2');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>id</th>\n",
+       "        <th>username</th>\n",
+       "        <th>password</th>\n",
+       "        <th>joinedDate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>TomGarske</td>\n",
+       "        <td>password</td>\n",
+       "        <td>2016-12-14 00:08:32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>TomGarske</td>\n",
+       "        <td>password2</td>\n",
+       "        <td>2016-12-14 00:08:38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>TomGarske1</td>\n",
+       "        <td>password</td>\n",
+       "        <td>2016-12-14 00:09:28</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, u'TomGarske', u'password', u'2016-12-14 00:08:32'),\n",
+       " (2, u'TomGarske', u'password2', u'2016-12-14 00:08:38'),\n",
+       " (4, u'TomGarske1', u'password', u'2016-12-14 00:09:28')]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql select * from users"
    ]
   },
   {
