got login to work successfully!

--- a/sqlite-database/production.ipynb
+++ b/sqlite-database/production.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -145,8 +145,8 @@
      "text": [
       "Done.\n",
       "Done.\n",
-      "CPU times: user 3.74 ms, sys: 2.3 ms, total: 6.04 ms\n",
-      "Wall time: 6.46 ms\n"
+      "CPU times: user 3.56 ms, sys: 2.07 ms, total: 5.63 ms\n",
+      "Wall time: 6.08 ms\n"
      ]
     },
     {
@@ -155,7 +155,7 @@
        "[]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +191,7 @@
        "[]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,12 +199,12 @@
    "source": [
     "%%sql \n",
     "INSERT INTO users (username, password)\n",
-    "VALUES ('TomGarske', 'password2');"
+    "VALUES ('TOM', 'pass');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -228,31 +228,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "        <td>1</td>\n",
-       "        <td>TomGarske</td>\n",
-       "        <td>password</td>\n",
-       "        <td>2016-12-14 00:08:32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>2</td>\n",
-       "        <td>TomGarske</td>\n",
-       "        <td>password2</td>\n",
-       "        <td>2016-12-14 00:08:38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>4</td>\n",
-       "        <td>TomGarske1</td>\n",
-       "        <td>password</td>\n",
-       "        <td>2016-12-14 00:09:28</td>\n",
+       "        <td>TOM</td>\n",
+       "        <td>pass</td>\n",
+       "        <td>2016-12-14 04:18:29</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(1, u'TomGarske', u'password', u'2016-12-14 00:08:32'),\n",
-       " (2, u'TomGarske', u'password2', u'2016-12-14 00:08:38'),\n",
-       " (4, u'TomGarske1', u'password', u'2016-12-14 00:09:28')]"
+       "[(1, u'TOM', u'pass', u'2016-12-14 04:18:29')]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
