--- a/sqlite-database/production.ipynb
+++ b/sqlite-database/production.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -145,8 +145,8 @@
      "text": [
       "Done.\n",
       "Done.\n",
-      "CPU times: user 3.56 ms, sys: 2.07 ms, total: 5.63 ms\n",
-      "Wall time: 6.08 ms\n"
+      "CPU times: user 3.55 ms, sys: 2.25 ms, total: 5.8 ms\n",
+      "Wall time: 6.25 ms\n"
      ]
     },
     {
@@ -155,7 +155,7 @@
        "[]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,12 +168,12 @@
     "                    username TEXT, \n",
     "                    password TEXT,\n",
     "                    joinedDate TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "                   UNIQUE (username,password) ON CONFLICT REPLACE);"
+    "                   UNIQUE (username) ON CONFLICT IGNORE);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -182,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 rows affected.\n"
+      "0 rows affected.\n"
      ]
     },
     {
@@ -191,7 +191,7 @@
        "[]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -230,15 +230,15 @@
        "        <td>1</td>\n",
        "        <td>TOM</td>\n",
        "        <td>pass</td>\n",
-       "        <td>2016-12-14 04:18:29</td>\n",
+       "        <td>2016-12-14 04:35:42</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(1, u'TOM', u'pass', u'2016-12-14 04:18:29')]"
+       "[(1, u'TOM', u'pass', u'2016-12-14 04:35:42')]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
